# InkLab-Vela

./: CMakeLists.txt  README.md  llm_conv.py  prj.conf  summary_LEGACY_MCU.txt  summary_UI.txt  summary_ZEPHYR.txt  west.yml
Legacy/: InkLab V3.0 (port).ioc
boards/: inklab_v1.overlay
include/: bus_manager.h  system_config.h
include/proto/: frontend_api.h
include/rtos/: usb_task.h
src/: bus_manager.c  main.c
src/hal/: battery_defs.c  battery_defs.h  battery_soc.c  battery_soc.h  bq25798.c  bq25798.h  diagnostics.c  diagnostics.h  error_manager.c  error_manager.h  ext_interfaces.c  ext_interfaces.h  fpga.c  fpga.h  joystick.c  joystick.h  led_manager.c  led_manager.h  pinmux.h  powerMonitor.c  powerMonitor.h  sys_power.c  sys_power.h
src/proto/: frontend_api.c
src/rtos/: usb_task.c
